[package]
name = "ssb-crypto"
version = "0.1.4"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Crypto primitives used by Secure Scuttlebutt"
repository = "https://github.com/sunrise-choir/ssb-crypto"
documentation = "https://docs.rs/ssb-crypto/"
readme = "README.md"
keywords = ["ssb", "scuttlebutt", "crypto"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.35"
wasm-bindgen-futures = "0.4.8"
wasm-bindgen = { version = "0.2.58", features = ["nightly", "serde-serialize"] }
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.104"
serde-big-array = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.8"